--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: svg2xml
-          path: path/to/artifact/
+          path: build/output/*.jar
 
       - name: Clean Workflow Logs
         uses: igorjs/gh-actions-clean-workflow@v3
