--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,10 +29,36 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Svg2VectorAndroid
-          path: build/*
+          path: build/libs/*.jar
 
       - name: Clean Workflow Logs
         uses: igorjs/gh-actions-clean-workflow@v3
         with:
                token: ${{ secrets.TOKEN }}
                days_old: 0  
+     - name: Check out repository
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+          fetch-depth: 0
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install Python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install gitpython requests
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Svg2VectorAndroid
+          path: artifacts/Svg2VectorAndroid.jar
+      - name: Send notifications
+        run: python send_notifications.py
+        env:
+          GITHUB_EVENT_BEFORE: ${{ github.event.before }}
+          TELEGRAM_CI_BOT_TOKEN: ${{ secrets.TELEGRAM_CI_BOT_TOKEN }}
+          TELEGRAM_CI_CHANNEL_ID: ${{ secrets.TELEGRAM_CI_CHANNEL_ID }}
+          ARTIFACT_DIRECTORY: artifacts/Svg2VectorAndroid.jar
+          GITHUB_REF: ${{ github.ref }}
