--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,8 +17,8 @@ jobs:
           submodules: true
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: 19
+          distribution: 'temurin'
+          java-version: 11
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-home-cache-cleanup: true
