--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,13 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+    
+     "packageRules": [
+        {
+            "groupName": "SDK",
+            "groupSlug": "sdk",
+            "matchPackagePrefixes": [
+                "com.android.tools"
+            ]
   ]
 }
