--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,14 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+    ],
     
-     "packageRules": [
+    "packageRules": [
         {
             "groupName": "SDK",
             "groupSlug": "sdk",
             "matchPackagePrefixes": [
-                "com.android.tools"
+                "com.android.tools*"
             ]
-         ]     
-  ]
+         }    
+  
 }
